@@ -1,0 +1,7 @@
+\nopagenumbers
+% 
+% For testing << in map lines.
+\special{pdf:mapline augie8r Augie <<augie___.pfb}
+\font\x = augie8r \x Hello.
+%
+\end
